fix: Fix code wrapping in all browsers (again)

--- a/assets/scss/components/_doks.scss
+++ b/assets/scss/components/_doks.scss
@@ -10,6 +10,7 @@ Doks — based on Ascetic by (c) Ivan Sagalaev <Maniac@SoftwareManiacs.Org>
   padding: 0.5em;
   background: $beige;
   color: $body-color;
+  word-wrap: normal;
 }
 
 .hljs-string,
